# Basic-Dialogue-System-Template

./: .gitignore  A more advanced multi-character interaction system.cpp  Basic-Dialogue-System-Template.cpp  CMakeLists.txt  CuteChatBot.cpp  Dialogue Tree System.cpp  README.md
.github/workflows/: build-and-release.yml
VisualNovelDemo/: CMakeLists.txt
VisualNovelDemo/data/characters/: sakura.json
VisualNovelDemo/data/scripts/: prologue.txt
VisualNovelDemo/include/: CharacterRenderer.h  DialogueSystem.h  ScriptInterpreter.h  VisualNovelEngine.h
VisualNovelDemo/src/: main.cpp
